[project]
name = "GoCueCellAnalysis"
authors = [{name = "Roger Herikstad", email = "rherikstad@proton.me"},
		  ]
version = "0.1.0"
dependencies = ["juliacall",
				"matplotlib",
				"numpy",
				"scipy"
				]
readme = "README.md"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"*" = ["juliapkg.json"]
